
lib_sources = files(
  'note.vala',
  'notebook.vala',
  'notebook_info.vala',
  'provider.vala',
  'trash.vala',
  'notebook_icon_type.vala',

  'local/local_provider.vala',
  'local/local_notebook.vala',
  'local/trash/local_trash.vala',
  'local/trash/trashed_notebook.vala',

  'util/fuzzy_matching.vala',
)
