
lib_sources = files(
  'note.vala',
  'note_container.vala',
  'notebook.vala',
  'notebook_info.vala',
  'provider.vala',
  'trash.vala',
  'notebook_icon_type.vala',

  'local/local_provider.vala',
  'local/local_notebook.vala',
  'local/trash/local_trash.vala',
  'local/trash/trashed_notebook.vala',

  'util/fuzzy_matching.vala',
  'util/file_utils.vala',
  'util/sugar.vala',
)
