
lib_sources = files(
  'note.vala',
  'note_container.vala',
  'notebook_info.vala',
  'provider.vala',
  'trash.vala',
  'notebook_icon_type.vala',

  'notebook/notebook.vala',
  'notebook/local_notebook.vala',
  'notebook/trashed_notebook.vala',

  'util/fuzzy_matching.vala',
  'util/file_utils.vala',
  'util/sugar.vala',
)
